Mon Oct 10 2005 Diana Cionoiu <diana@diana.null.ro>
- Added iLBC codec support

Thu May 05 2005 Paul Chitescu <paulc-devel@null.ro>
- Separate client directory and executables
- Support for passing arguments to client programs
- Put some usefull tools in their own directory

Mon Apr 02 2005 Paul Chitescu <paulc-devel@null.ro>
- Windows directory and Visual Studio 6 project files
- Started changes to make the engine cross-platform

Fri Mar 18 2005 Paul Chitescu <paulc-devel@null.ro>
- Bumped version to 0.8.8
- Rearranged directories and file names

Tue Jan 18 2005 Paul Chitescu <paulc-devel@null.ro>
- Version 0.8.7
- Fixed session destruction in libiax
- Fixed miscellaneous bugs in iaxchan
- Fixed a bug related to ObjList cleanup

Mon Jan 10 2005 Paul Chitescu <paulc-devel@null.ro>
- Improved detection of Qt-3 headers
- SIP channel supports reinvite and config file
- Versioned libyate.so (full version, also matches soname)
- Improved detection of Qt-3 and PostgesSQL headers
- Main config file name can be changed from command line
- Default config file name matches executable name argv[0]

Sun Jan 09 2005 Dorin Lazar <lazar@deuromedia.ro>
- Improved the Qt-3 client, added call history support

Thu Jan 06 2005 Paul Chitescu <paulc-devel@null.ro>
- Support for RTP pass-trough in SIP and H.323 modules
- Textual call end reasons in the H.323 module
- Added the possibility of declaring fake codecs
- More assignment operators for String class

Fri Dec 24 2004 Paul Chitescu <paulc-devel@null.ro>
- Added Yet Another SIP Engine and a SIP channel based

Tue Dec 21 2004 Paul Chitescu <paulc-devel@null.ro>
- Added final parameter to disconnect.
- Renamed most messages.
- Added soname in library.

Mon Dec 20 2004 Paul Chitescu <paulc-devel@null.ro>
- Bumped version to 0.8.6
- Added soname to libyate.so
- Made configure script generate yateversn.h from the package version
- Renamed all non-engine messages to a consistent scheme