@@ -3,7 +3,7 @@ AC_INIT(YATE, 0.9.0)
 AC_CONFIG_SRCDIR([README])
 AC_PREREQ(2.52)
 
-PACKAGE_RELEASE="pre2"
+PACKAGE_RELEASE="pre3"
 
 PACKAGE_VERSION_MAJOR="${PACKAGE_VERSION%%.*}"
 PACKAGE_VERSION_MINOR="${PACKAGE_VERSION#*.}"
